fixed the fx layout should work now also on mobile

--- a/frontend/src/app/cards/card-message/card-message.component.css
+++ b/frontend/src/app/cards/card-message/card-message.component.css
@@ -1,6 +1,6 @@
 .embeddableMessage {
   border-radius: 0;
-  min-width: 300px;
+  margin: auto;
 }
 
 .postPicture {
